[make] 置き場所選択をすべて分離させた。"

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,5 +1,5 @@
-simulate: simulate.o list.o reversi.o
-	gcc simulate.o list.o reversi.o -o simulate
+simulate: simulate.o list.o reversi.o logic.o utility.o
+	gcc simulate.o list.o reversi.o logic.o utility.o -o simulate
 
 simulate.o: simulate.c
 	gcc -c simulate.c
@@ -9,3 +9,9 @@ list.o: list.c
 
 reversi.o: reversi.c
 	gcc -c reversi.c
+
+logic.o: logic.c
+	gcc -c logic.c
+
+utility.o: utility.c
+	gcc -c utility.c
